feat: ajuste de structura para swagger
