# swagger/swagger.yml
@@ -581,6 +581,60 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
+  /Plan_adquisiciones_mongo/:
+    get:
+      tags:
+      - Plan_adquisiciones_mongo
+      description: get PlanAdquisicionesMongo
+      operationId: PlanAdquisicionesMongoController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. {vigencia:2020}
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.PlanAdquisicionesMongo'
+        "404":
+          description: not found resource
+    post:
+      tags:
+      - Plan_adquisiciones_mongo
+      description: create PlanAdquisicionesMongo
+      operationId: PlanAdquisicionesMongoController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for PlanAdquisicionesMongo content
+        required: true
+        schema:
+          $ref: '#/definitions/models.PlanAdquisicionesMongo'
+      responses:
+        "201":
+          description: '{int} models.PlanAdquisicionesMongo'
+        "400":
+          description: the request contains incorrect syntax
+  /Plan_adquisiciones_mongo/{id}:
+    get:
+      tags:
+      - Plan_adquisiciones_mongo
+      description: get PlanAdquisicionesMongo by id
+      operationId: PlanAdquisicionesMongoController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.PlanAdquisicionesMongo'
+        "404":
+          description: not found resource
   /Registro_funcionamiento-Modalidad_seleccion/:
     get:
       tags:
@@ -1172,6 +1226,26 @@ definitions:
       Numero:
         type: integer
         format: int64
+  models.ActividadMongo:
+    title: ActividadMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+      meta:
+        $ref: '#/definitions/models.MetaMongo'
+      nombre:
+        type: string
+      numero:
+        type: integer
+        format: int64
   models.FichaEBIMGA:
     title: FichaEBIMGA
     type: object
@@ -1233,6 +1307,38 @@ definitions:
       Vigencia:
         type: integer
         format: int64
+  models.LineamientoMongo:
+    title: LineamientoMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      area_funcional_id:
+        type: integer
+        format: int64
+      centro_gestor:
+        type: integer
+        format: int64
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      fuente_recurso_id:
+        type: integer
+        format: int64
+      id:
+        type: integer
+        format: int64
+      nombre:
+        type: string
+      numero:
+        type: integer
+        format: int64
+      objetivo:
+        type: string
+      vigencia:
+        type: integer
+        format: int64
   models.Meta:
     title: Meta
     type: object
@@ -1255,6 +1361,28 @@ definitions:
         format: int64
       Rubro:
         type: string
+  models.MetaMongo:
+    title: MetaMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+      lineamiento:
+        $ref: '#/definitions/models.LineamientoMongo'
+      nombre:
+        type: string
+      numero:
+        type: integer
+        format: int64
+      rubro:
+        type: string
   models.PlanAdquisiciones:
     title: PlanAdquisiciones
     type: object
@@ -1271,6 +1399,32 @@ definitions:
         type: integer
         format: int64
       Vigencia:
+        type: integer
+        format: int64
+  models.PlanAdquisicionesMongo:
+    title: PlanAdquisicionesMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      descripcion:
+        type: string
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      ficha_eb_imga:
+        type: array
+        items:
+          $ref: '#/definitions/models.FichaEBIMGA'
+      id:
+        type: integer
+        format: int64
+      registro_plan_adquisiciones:
+        type: array
+        items:
+          $ref: '#/definitions/models.RegistroPlanAdquisicionesMongo'
+      vigencia:
         type: integer
         format: int64
   models.RegistroFuncionamientoModalidadSeleccion:
@@ -1290,6 +1444,22 @@ definitions:
         type: string
       RegistroPlanAdquisicionesId:
         $ref: '#/definitions/models.RegistroPlanAdquisiciones'
+  models.RegistroFuncionamientoModalidadSeleccionMongo:
+    title: RegistroFuncionamientoModalidadSeleccionMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+      id_modalidad_seleccion:
+        type: integer
+        format: int64
   models.RegistroInversionActividadFuenteFinanciamiento:
     title: RegistroInversionActividadFuenteFinanciamiento
     type: object
@@ -1308,6 +1478,24 @@ definitions:
       RegistroPlanAdquisicionesActividadId:
         $ref: '#/definitions/models.RegistroPlanAdquisicionesActividad'
       ValorAsignado:
+        type: integer
+        format: int64
+  models.RegistroInversionActividadFuenteFinanciamientoMongo:
+    title: RegistroInversionActividadFuenteFinanciamientoMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      fuente_financiamiento_id:
+        type: string
+      id:
+        type: integer
+        format: int64
+      valor_asignado:
         type: integer
         format: int64
   models.RegistroPlanAdquisiciones:
@@ -1358,6 +1546,28 @@ definitions:
       Valor:
         type: integer
         format: int64
+  models.RegistroPlanAdquisicionesActividadMongo:
+    title: RegistroPlanAdquisicionesActividadMongo
+    type: object
+    properties:
+      actividad:
+        $ref: '#/definitions/models.ActividadMongo'
+      activo:
+        type: boolean
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+      registro_inversion_actividad-fuente_financiamiento:
+        type: array
+        items:
+          $ref: '#/definitions/models.RegistroInversionActividadFuenteFinanciamientoMongo'
+      valor:
+        type: integer
+        format: int64
   models.RegistroPlanAdquisicionesCodigoArka:
     title: RegistroPlanAdquisicionesCodigoArka
     type: object
@@ -1375,6 +1585,56 @@ definitions:
         format: int64
       RegistroPlanAdquisicionesId:
         $ref: '#/definitions/models.RegistroPlanAdquisiciones'
+  models.RegistroPlanAdquisicionesCodigoArkaMongo:
+    title: RegistroPlanAdquisicionesCodigoArkaMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      codigo_arka:
+        type: string
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+  models.RegistroPlanAdquisicionesMongo:
+    title: RegistroPlanAdquisicionesMongo
+    type: object
+    properties:
+      activo:
+        type: boolean
+      centro_gestor:
+        type: integer
+        format: int64
+      fecha_creacion:
+        type: string
+      fecha_modificacion:
+        type: string
+      id:
+        type: integer
+        format: int64
+      meta_id:
+        type: string
+      producto_id:
+        type: string
+      registro_funcionamiento-modalidad_seleccion:
+        type: array
+        items:
+          $ref: '#/definitions/models.RegistroFuncionamientoModalidadSeleccionMongo'
+      registro_plan_adquisiciones-actividad:
+        type: array
+        items:
+          $ref: '#/definitions/models.RegistroPlanAdquisicionesActividadMongo'
+      registro_plan_adquisiciones-codigo_arka:
+        type: array
+        items:
+          $ref: '#/definitions/models.RegistroPlanAdquisicionesCodigoArkaMongo'
+      responsable_id:
+        type: integer
+        format: int64
 tags:
 - name: Meta
   description: |
@@ -1385,6 +1645,9 @@ tags:
 - name: Plan_adquisiciones
   description: |
     PlanAdquisicionesController operations for PlanAdquisiciones
+- name: Plan_adquisiciones_mongo
+  description: |
+    PlanAdquisicionesMongoController operations for PlanAdquisicionesMongo
 - name: Registro_plan_adquisiciones
   description: |
     RegistroPlanAdquisicionesController operations for RegistroPlanAdquisiciones
